--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <form id="todo-form">
       <input type="text" placeholder="오늘 할 일을 적어주세요." required />
     </form>
+    <p class="will">< 해야할 일 ></p>
     <ul id="todo-list"></ul>
-
+    <p class="past">< 완료! ></p>
+    <ul id="check-list"></ul>
     <div id="quote">
       <span></span>
       <br />
