--- a/todo/index.html
+++ b/todo/index.html
@@ -31,11 +31,15 @@
         <div id="title">-- 할 일 목록 --</div>
         <ul></ul>
         <div class="face">
-          <i class="far fa-laugh-beam fa-2x"></i>
-          <i class="far fa-smile-beam fa-2x"></i>
-          <i class="far fa-meh-rolling-eyes fa-2x"></i>
-          <i class="far fa-sad-cry fa-2x"></i>
-          <i class="far fa-angry fa-2x"></i>
+          <button>
+            <i id="happy" class="far fa-laugh-beam fa-2x"></i>
+          </button>
+          <button><i id="smile" class="far fa-smile-beam fa-2x"></i></button>
+          <button>
+            <i id="soso" class="far fa-meh-rolling-eyes fa-2x"></i>
+          </button>
+          <button><i id="sad" class="far fa-sad-cry fa-2x"></i></button>
+          <button><i id="angry" class="far fa-angry fa-2x"></i></button>
         </div>
       </div>
     </div>
